--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ h3 {
     font-size: calc(100% * 1.7);
 }
 
+h1, h2, h3 {
+    color: hsl(210, 10%, 33%);
+}
+
 p {
     color: hsl(201, 11%, 66%);
 }
@@ -76,6 +80,7 @@ main {
     color: white;
     font-size: 1rem;
     cursor: pointer;
+    box-shadow: inset 0.5px -2px 2px hsl(210, 10%, 33%);
 }
 
 .cta-btns .cta:active {
